# offs

./: .editorconfig  .gitignore  .mise.toml  .pre-commit-config.yaml  .prettierignore  .prettierrc.yaml  .roomodes  Cargo.toml  Justfile  LICENSE-APACHE  LICENSE-MIT  README.md  deny.toml  rustfmt.toml
.github/workflows/: ci.yml
crates/fetch-prompt/: Cargo.toml
crates/fetch-prompt/src/: main.rs
scripts/: check-file-size.sh  generate-llms-txt.sh  setup-ai-context.sh  setup-vscode-extensions.sh
templates/ai/: AGENT.default.md  AGENT.strict.md  AGENTS.default.md  AGENTS.strict.md  llms.txt
