[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
authors = ["The offs Contributors"]
description = "A Rust workspace for web-based LLM interactions."
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rikonor/offs"

[workspace.lints.rust]
missing_debug_implementations = "warn"
missing_docs = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }
unsafe_code = "forbid"

[workspace.lints.clippy]
expect_used = "warn"
nursery = "warn"
pedantic = "warn"
unwrap_used = "warn"

[workspace.lints.rustdoc]
bare_urls = "warn"
broken_intra_doc_links = "warn"
invalid_codeblock_attributes = "warn"
invalid_html_tags = "warn"
invalid_rust_codeblocks = "warn"
missing_crate_level_docs = "warn"
private_intra_doc_links = "warn"
