[package]
name = "fetch-prompt"
version = "0.1.0"
edition = "2024"

[dependencies]
genai = "0.4.4"
readability = "0.3.0"
reqwest = { version = "0.12.24", features = ["blocking"] }
tokio = { version = "1.48.0", features = ["full"] }
futures = "0.3"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0.100"
