[package]
edition = "2021"
license = "MIT"
name = "fetch-prompt"
version = "0.1.0"

[lints]
workspace = true

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5", features = ["derive"] }
futures = "0.3"
genai = "0.4.4"
readability = "0.3.0"
reqwest = { version = "0.12.24", features = ["blocking"] }
tokio = { version = "1.48.0", features = ["full"] }
